--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="footer__row">
                     <div class="text-center copyright">
-                        <span> © 2024 FUNKS TOKIO. All rights reserved! </span>
+                        <span> © 2024 FUNKS TOKYO. All rights reserved! </span>
                       </div>
                 </div>
             </div>
