--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="header__row">
 
                     <div class="header__logo">
-                        <a href="https://opensea.io/collection/love-funks" target="_blank"><img src="images/img-logo.png" alt="logo site"></a>
+                        <a href="https://funks.tokyo/" target="_blank"><img src="images/img-logo.png" alt="logo site"></a>
                     </div>
 
                     <div class="header__center">
