--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     <div class="header__center">
                         <a href="https://etherscan.io/address/0x9B2e05582Ee21Ff5D3B38Bb83d4bbB4106367B88" target="_blank" class="head-etherscan"></a>
-                        <a href="https://opensea.io/collection/love-funks" target="_blank" class="head-opensea"></a>
+                        <a href="https://opensea.io/collection/lovefunks" target="_blank" class="head-opensea"></a>
                         <a href="https://twitter.com/FunksTokyo" target="_blank" class="head-twitter"></a>
                         <a href="https://discord.gg/SAXc4qre" target="_blank" class="head-discord"></a>
                     </div>
